--- a/app.yaml
+++ b/app.yaml
@@ -1,11 +1,5 @@
-runtime: python27
-api_version: 1
-threadsafe: true
+runtime: python37
 
-handlers:
-- url: /.*
-  script: main.app
-
-libraries:
-- name: flask
-  version: 0.12
+handlers: 
+- url: /.* 
+script: test.py
